# skills-benchmarks

./: .env.example  .gitignore  .gitleaksignore  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  eslint.config.js  install.sh  package-lock.json  package.json  pyproject.toml  run.sh  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
config/: AGENTS.md
harbor_tasks/oss-fix-lc-streaming/: task.toml
scaffold/: __init__.py  capture.py  cleanup.py  config.py  framework.py  logging.py  logs.py  model.py  runner.py  setup.py  tasks.py  templates.py  treatments.py  utils.py  validation.py  validators.py
scaffold/hooks/: stop_hook.sh
scaffold/python/: __init__.py  external_data_handler.py  logging.py  schema.py  skill_parser.py  tasks.py  treatments.py  utils.py  validation.py
scaffold/schemas/: treatment.schema.json
scaffold/shell/: docker.sh  run_experiment.sh  setup.sh  setup_claude_tracing.sh  validate.sh
scaffold/typescript/: external_data_handler.ts  index.ts  logging.ts  schema.ts  skill_parser.ts  tasks.ts  treatments.ts  utils.ts  validation.ts
scripts/: convert_skill.py  convert_task.py  harbor_run.sh  sweep.py
skill_constructs/: CLAUDE_SAMPLE.md  __init__.py  construct.py  parser.py
skill_constructs/langchain/: __init__.py
skill_constructs/noise/: __init__.py
skill_constructs/pytest_fixtures/: SKILL_SAMPLE.md  __init__.py  skill.py
skillbench_harbor/: __init__.py  skill_render.py  treatments.py
skills/: CLAUDE.md  __init__.py  parser.py  parser.ts
skills/benchmarks/: framework-selection  langchain-agent-starter-kit  langchain-dependencies
skills/langsmith-dataset/: SKILL.md
skills/langsmith-evaluator/: SKILL.md
skills/pytest-fixtures/: SKILL.md
tasks/: index.yaml
tasks/lc-basic/: task.toml
tasks/lc-basic-claudemd/: instruction.md  task.toml  treatments.yaml
tasks/lc-basic-guidance/: task.toml  treatments.yaml
tasks/lc-basic-noise/: instruction.md  task.toml  treatments.yaml
tasks/lc-deps-tavily/: instruction.md  task.toml  treatments.yaml
tasks/lc-ecosystem-bootstrap/: instruction.md  task.toml
tasks/lc-ecosystem-env-setup/: instruction.md  task.toml
tasks/lc-ecosystem-install/: instruction.md  task.toml
tasks/lc-framework-approval-pipeline/: instruction.md  task.toml
tasks/lc-framework-choice/: instruction.md  task.toml  treatments.yaml
tasks/lc-framework-hybrid-pipeline/: instruction.md  task.toml
tasks/lc-framework-middleware-agent/: instruction.md  task.toml
tasks/lc-framework-personal-assistant/: instruction.md  task.toml
tasks/lc-framework-qa-agent/: instruction.md  task.toml
tasks/lc-framework-research-assistant/: instruction.md  task.toml
tasks/lc-version-confusion/: instruction.md  task.toml  treatments.yaml
tasks/ls-agent-optimizer/: instruction.md  task.toml
tasks/ls-evaluator/: instruction.md  task.toml
tasks/ls-lang-evaluator/: instruction.md  task.toml  treatments.yaml
tasks/ls-lang-tracing/: task.toml  treatments.yaml
tasks/ls-multiskill-advanced/: instruction.md  task.toml  treatments.yaml
tasks/ls-multiskill-basic/: instruction.md  task.toml  treatments.yaml
tasks/ls-trace-autogen/: instruction.md  task.toml
tasks/ls-trace-crewai/: instruction.md  task.toml
tasks/ls-trace-google-adk/: instruction.md  task.toml
tasks/ls-trace-openai-agents/: instruction.md  task.toml
tasks/ls-trace-pydantic-ai/: instruction.md  task.toml
tasks/ls-tracing/: instruction.md  task.toml
tasks/oss-fix-da-memory/: instruction.md  task.toml  treatments.yaml
tests/: conftest.py  conftest.ts  fixtures.ts  globalSetup.ts  run_test_suite.py  test_tasks.py  treatments.yaml
(+1834 files in other folders)
