[project]
name = "skills-benchmark"
version = "0.1.0"
description = "Benchmark for evaluating LangChain skills"
requires-python = ">=3.11"
dependencies = [
    "langsmith>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "deepagents>=0.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pexpect>=4.9.0",
    "openai>=1.0.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-repeat>=0.9.0",
    "pytest-timeout>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B008"]  # Allow function calls in default args for pytest fixtures

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
# Ignore logs directory which contains test files created by Claude during benchmark runs
norecursedirs = ["logs", "node_modules", ".git"]
testpaths = ["tests"]
pythonpath = ["."]
