[project]
name = "skills-benchmark"
version = "0.1.0"
description = "Benchmark for evaluating LangChain skills"
requires-python = ">=3.11"
dependencies = [
    "langsmith>=0.6.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.0.0",
    "deepagents>=0.4.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-repeat>=0.9.0",
    "pytest-timeout>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "responses>=0.25.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B008"]  # Allow function calls in default args for pytest fixtures

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
# Ignore logs directory which contains test files created by Claude during benchmark runs
norecursedirs = ["logs", "node_modules", ".git"]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
langsmith = { path = "../../langchain_product/langsmith-sdk/python", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
